--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="confirm">确定</string>
     <string name="tip_login_out">App已关闭，请手动重新开启！</string>
     <string name="cancel">取消</string>
+    <string name="not_find_any_devices">找不到任何设备！</string>
 </resources>
