--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="tip_login_out">App已关闭，请手动重新开启！</string>
     <string name="cancel">取消</string>
     <string name="not_find_any_devices">找不到任何设备！</string>
+    <string name="get_camera_list_fail">获取设备列表失败</string>
 </resources>
