新增实现主页面设备列表布局，并实现点击设备播放按钮跳转播放activity。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cancel">取消</string>
     <string name="not_find_any_devices">找不到任何设备！</string>
     <string name="get_camera_list_fail">获取设备列表失败</string>
+    <string name="get_camera_list_fail2">获取设备列表失败！请重新登录！</string>
 </resources>
