--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="not_find_any_devices">找不到任何设备！</string>
     <string name="get_camera_list_fail">获取设备列表失败</string>
     <string name="get_camera_list_fail2">获取设备列表失败！请重新登录！</string>
+    <string name="quality_balanced">均衡</string>
+    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
 </resources>
